Track4/webdev/daemonset-logger.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-logger
  namespace: webdev
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logger
        image: busybox
        command: ["sh", "-c", "while true; do echo \"$(date) $(hostname) logging\"; sleep 30; done"]
