Track4/webdev/deployment-web-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dev-deployment
  namespace: webdev
  labels:
    environment: dev
    app: web
    region: EU
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      environment: dev
  template:
    metadata:
      labels:
        app: web
        environment: dev
        region: EU
    spec:
      containers:
      - name: web
        image: gabrisource/webdev-web:1.0
        imagePullPolicy: Always #forza kube a usare sempre l immagine di docker hub
        #imagePullPolicy: Never --->nel caso si voglia usare immagine locale gestita da minikube
        ports:
        - containerPort: 5000
