Track4/webdev/service-web-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-dev-loadbalancer
  namespace: webdev
  labels:
    app: web
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: web
    environment: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
