Track4/webdev/ingress-web-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-dev-ingress
  namespace: webdev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: webdev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-dev-loadbalancer
            port:
              number: 80
